src/ty/snapshots/tvm__ty__tests__bad_return_outside_fn.snap
---
source: src/ty/tests.rs
expression: "check!(r#\"\n        return\n    \"#)"
---
error: `return` used outside of function
1 |  return
  |  ^^^^^^


